fix(update): Update docs to 1.2.3
